--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bran Castle Fine Dining Menu - September 28, 2025</title>
-    <meta name="description" content="Exquisite fine dining menu for an exclusive event at the legendary Bran Castle" />
+    <title>Bran Castle Menu - September 28, 2025</title>
+    <meta name="description" content="Exquisite dining menu for an exclusive event at the legendary Bran Castle" />
     <meta name="author" content="Lovable" />
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500&display=swap">
