--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500&display=swap">
 
-    <meta property="og:title" content="Bran Castle Fine Dining Menu - September 28, 2025" />
-    <meta property="og:description" content="Exquisite fine dining menu for an exclusive event at the legendary Bran Castle" />
+    <meta property="og:title" content="Bran Castle Menu - September 28, 2025" />
+    <meta property="og:description" content="Exquisite dining menu for an exclusive event at the legendary Bran Castle" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
